--- a/.github/workflows/test_devops.yml
+++ b/.github/workflows/test_devops.yml
@@ -36,6 +36,6 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       env:
-        api_key: ${{ secrets.SHOUTCAST_API_KEY }}
+        SHOUTCAST_API_KEY: ${{ secrets.SHOUTCAST_API_KEY }}
       run: |
         pytest
